# crewai_seo_article

./: README.md  pyproject.toml
knowledge/: article_content_writer_temperatur_empfehlung.md
misc/: Stoxxsales.postman_collection.json
src/crewai_seo_article/: crew.py  main.py
src/crewai_seo_article/config/: agents.yaml  tasks.yaml
src/crewai_seo_article/tools/: long_tail_keyword_tool.py  serper_dev_tool.py
